--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/media/data/programming/java/libraries/javatuples-1.1.jar"/>
-	<classpathentry kind="lib" path="/media/data/programming/java/libraries/extMath.jar"/>
-	<classpathentry kind="lib" path="/media/data/programming/java/libraries/guava-18.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="libraries/extMath.jar"/>
+	<classpathentry kind="lib" path="libraries/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="libraries/javatuples-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
