--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="libraries/extMath.jar"/>
+	<classpathentry kind="lib" path="libraries/extMath.jar" sourcepath="/ExtMath/src"/>
 	<classpathentry kind="lib" path="libraries/guava-18.0.jar"/>
 	<classpathentry kind="lib" path="libraries/javatuples-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
